# pykod

./: CONFIG_GENERATOR_README.md  DEBIAN_IMPLEMENTATION_PLAN.md  PR_DESCRIPTION.md  README.md  USAGE.md  clean_deduplicated_config.py  cli.py  configuration.py  development.py  disk.py  example_enhanced_config.py  example_installation.py  final_lean_config.py  generated_config.py  install-deb.sh  install.sh  optimized_config.py  out-inst.txt  out.txt  pykod_config_generator.py  pyproject.toml  read_configuration_pickle.py  sample_categorized_config.py  session-ses_4567.md
eszkoz/: cli.lua  configuration.lua  development.lua  extra.lua  gnome.lua
example/: cli.py  configuration-base.py  configuration-debian.py  configuration-device.py  configuration-lenovo.py  configuration-prev.py  configuration-ubuntu.py  configuration-vm.py  configuration.py  demo_configuration.py  development.py  eszkoz.py  gpu_detection_example.py  install.py
example/assets/: face
log/: output.txt
mnt/kod/generations/0/: configuration.json  enabled_services  installed_packages
mnt/kod/generations/1/: configuration.json  enabled_services  installed_packages
mnt/kod/generations/2/: enabled_services  installed_packages
src/pykod/: __init__.py  cli.py  common.py  config.py  core.py  desktop.py  devices.py  dotfiles.py  fonts.py  hardware.py  locale.py  network.py  openssh.py  packages.py  section.py  service.py  user.py
src/pykod/base/: __init__.py  nesteddict.py
src/pykod/repositories/: __init__.py  arch.py  aur.py  base.py  debian.py  flatpak.py  ppa.py  snap.py
