[project]
name = "pykod"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Antal Buss", email = "antal.buss@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "chorut>=0.1.5",
]

[build-system]
requires = ["uv_build>=0.9.3,<0.10.0"]
build-backend = "uv_build"

[tool.ruff.lint]
ignore = ["F821"]

[tool.zuban]
#strict = true
disallow_untyped_defs = true
warn_unreachable = true
